# RG93-movig-target

./: CMakeLists.txt  Makefile  README.md  image.c  image.h  main.c  movig-target  objekti.c  objekti.h
